2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MarbleModel.cpp (setMapTheme)

    Part 10 of groundwork for OpenStreetMap texture tiles.
    Do not call TileCreator if installmap (DGML) is empty.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/CMakeLists.txt

    Part 9 of groundwork for OpenStreetMap texture tiles.
    Install data files for OpenStreetMap theme.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp (loadRawTile): Make it a little bit easier
    to read and respect max. 100 chars/row.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    (loadTile): Coding style.
    (destructor): Simplify.

    Small cleanup.

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    (loadTile)
    (destructor)

    Part 8 of groundwork for OpenStreetMap texture tiles.
    Add support for 48 bit color depth, reuse jumpTableFromQImage32 for that.
    TODO: change names *32 to *_32_48?

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp
    * src/lib/TextureTile.h (pixel)
    (loadTile)
    (destructor)

    Part 7 of groundwork for OpenStreetMap texture tiles.
    Add support for 1 bit color depth, reuse jumpTableFromQImage8 for that.
    TODO: change names *8 to *_1_8?

2008-05-16  Claudiu Covaci  <claudiu.covaci@gmail.com>

    * src/lib/geodata/data/GeoDataContainer.{h,cpp}:
    * src/lib/geodata/data/GeoDataHotSpot.{h,cpp}:
    * src/lib/geodata/data/GeoDataIconStyle.cpp:
    - fixed the constructors (added the proper constructor
    in the d-pointer
    - moved protected members to the d-pointer

    * src/lib/geodata/data/GeoDataLabelStyle.h:
    - fix: changed protected to private

    * src/lib/geodata/data/GeoDataLabelStyle.{h,cpp}:
    * src/lib/geodata/data/GeoDataStyleSelector.{h,cpp}:
    - Change to use the d-pointer technique

2008-05-16  Jens-Michael Hoffmann  <jensmh@gmx.de>
